feat: implementar sistema de autenticación y multitenancy completo
  - Agregar módulo de autenticación con JWT y Passport
  - Implementar registro de admin con auto-creación de tenant
  - Crear módulo de usuarios con filtrado por tenant
  - Implementar guards y decorators para autorización
  - Configurar middleware de contexto de tenant con search_path dinámico
  - Agregar sistema de roles (ADMIN, INQUILINO)
  - Crear utilidades para generación de slugs

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-# Database
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=gestion_alquileres
 
-# App
-PORT=
-NODE_ENV=
+# JWT Configuration
+JWT_SECRET=super-secret-key-change-in-production-min-32-chars-long
+JWT_EXPIRATION=7d
 
-# JWT (para autenticación futura)
-JWT_SECRET=
-JWT_EXPIRATION=
+# Application Configuration
+PORT=3000
+NODE_ENV=development
